--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.2"
+    "mongoose": "^9.1.2",
+    "multer": "^2.0.2"
   }
 }
